Modified view page

--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    File Store
 </head>
 <body>
     <h1>Welcome to Html File Data store</h1>
@@ -16,14 +17,6 @@
                 <div>
                     <label>Please enter file name(with file extension):</label>
                     <input type="text" name="fileName" required/>
-                </div>
-                <div>
-                    <label>Page Number</label>
-                    <input type="text" name="pageNo" />
-                </div>
-                <div>
-                    <label>Page Size</label>
-                    <input type="text" name="size" />
                 </div>
                 <input type="submit" value="Submit" />
             </form>   
@@ -45,6 +38,14 @@
     <div class="UploadFileSection">
         <h3>List All Files:</h3>
         <form action="/api/listFiles" method="GET">
+            <div>
+                <label>Page Number</label>
+                <input type="text" name="pageNo" />
+            </div>
+            <div>
+                <label>Page Size</label>
+                <input type="text" name="size" />
+            </div>
             <input type="submit" value="Get All Files content" name="GetFiles">
         </form>   
            
